--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -938,8 +938,11 @@ section,
   transition: 0.3s;
   width: 40%;
   margin-left: 50px;
-  
-  margin-top: -75px
+  box-shadow:  1px 1px 4px 4px #21733a;
+  margin-top: -50px;
+  height:450px;
+  width: 600px;
+
 }
 
 
