--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -955,10 +955,17 @@ section,
 /*--------------------------------------------------------------
 # Clients Section
 --------------------------------------------------------------*/
+.clients {
+  background-color: rgb(255, 255, 249,);
+  height: 250px;
+  
+}
+
 .clients .swiper-slide img {
 
   transition: 0.3s;
   opacity: 1;
+  margin-top: -25px;
   
 }
 
@@ -1145,7 +1152,7 @@ section,
   margin-top: 40px;
 }
 .notice{
- background-color: #ffffff;
+ background-color: rgb(255, 255, 249,);
 }
 
 .notice .notice-item {
